--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Blog Prview</title>
 </head>
 <body>
-    <div class="app-container">
+    <main class="app-container">
 
         <div class="card">
             <div class="header">
@@ -28,6 +28,6 @@
                 <p>Greg Hooper</p>
             </div>
         </div>
-    </div>
+    </main>
 </body>
 </html>
